syntax = "proto3";

package RavelClusterAdminPB;

option go_package = "./RavelClusterAdminPB";

// RavelClusterAdmin is the main service that is exposed to the nodes in a Ravel cluster
service RavelClusterAdmin {
    rpc JoinExistingCluster(Node) returns (Cluster);
    rpc JoinAsClusterLeader(Node) returns (Cluster);
    rpc UpdateClusterLeader(Node) returns (Response);
    rpc LeaveCluster(Node) returns (Response);
    rpc GetClusterLeader(Cluster) returns (Node);
}

// Cluster represents the information to represent a cluster leader in Ravel
message Cluster {
    string cluster_id = 1;
    string leader_grpc_address = 2;
    string leader_raft_address = 3;
}

message Response {
    string data = 1;
}

// Node represents the information to represent a node in Ravel
message Node {
    string node_id = 1;
    string grpc_address = 2;
    string raft_address = 3;
    string cluster_id = 4;
}