syntax = "proto3";
package RavelClusterPB;
option go_package = "./RavelClusterPB";

service ravelCluster{
    rpc Join(Node) returns (void);
    rpc Leave(Node) returns (void);
    rpc Run(Command) returns (Response);
    rpc isLeader(void) returns (Boolean);
}

message void{
}

message Boolean{
    bool leader=1;    
}

message Response{
    string data=1;
}

message Command{
    string Operation=1;
    bytes key=2;
    optional bytes value=3;
}

message Node{
    string NodeID=1;
    string address=2;
}

